estrutura básica de portal dos modulos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,52 @@
 </head>
 <body>
 
+<main class="container" id="portal">
+	<header id="header-portal">
+		<h1>
+			<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit</span>
+		</h1>
+		<div class="ufg">
+			<img src="assets/img/marca-ufg.svg" alt="Marca da Universidade Federal de Goiás">
+		</div>
+	</header>
+
+	<ul id="lista-modulos" role="navigation">
+		<li>
+			<a href="#" class="ancora-modulo"></a>
+			<h2><span>Módulo </span>1</h2>
+		</li>
+
+		<li>
+			<a href="#" class="ancora-modulo"></a>
+			<h2><span>Módulo </span>2</h2>
+		</li>
+
+		<li class="desabilitado">
+			<a href="#" class="ancora-modulo"></a>
+			<h2><span>Módulo </span>3</h2>
+		</li>
+
+		<li class="desabilitado">
+			<a href="#" class="ancora-modulo"></a>
+			<h2><span>Módulo </span>4</h2>
+		</li>
+
+		<li class="desabilitado">
+			<a href="#" class="ancora-modulo"></a>
+			<h2><span>Módulo </span>5</h2>
+		</li>
+
+		<li class="desabilitado">
+			<a href="#" class="ancora-modulo"></a>
+			<h2><span>Módulo </span>6</h2>
+		</li>
+	</ul>
+</main>
 
 
+<!-- SCRIPTS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="assets/js/app.js"></script>
 </body>
 </html>
