Home: estruturação dos volumes e acesso via celular

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>Pedagógico Ciar UFG</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/layout.css">
+	<link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
+	<meta name="theme-color" content="#212121" />
+	<meta name="msapplication-navbutton-color" content="#212121">
 </head>
 <body>
 
@@ -19,35 +22,96 @@
 		</div>
 	</header>
 
-	<ul id="lista-modulos" role="navigation">
-		<li>
-			<a href="#" class="ancora-modulo"></a>
-			<h2><span>Módulo </span>1</h2>
+	<ul id="lista-volumes" role="navigation">
+		<!-- VOLUME 1 -->
+		<li class="volume" id="volume1">
+			<div class="entrada">
+				<a href="#volume1" class="ancora-volume"></a>
+				<h2><span>Volume </span>1</h2>
+			</div>
+
+
+			<div class="apresenta">
+				<h3>Volume 1</h3>
+				<h4>Optio incidunt ullam illum</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio incidunt ullam illum eligendi eius eaque maiores voluptatum iusto.</p>
+
+				<dl>
+					<dt>Organização</dt>
+					<dd>André Gaudreault</dd>
+					<dd>Carlos Augusto da Nóbrega</dd>
+					<dd>Felipe C. Londoño</dd>
+				</dl>
+
+				<p><a href="#" class="btn">Acessar volume</a></p>
+			</div>
+
+			<div class="voltar"><a href="index.html">voltar</a></div>
 		</li>
 
-		<li>
-			<a href="#" class="ancora-modulo"></a>
-			<h2><span>Módulo </span>2</h2>
+
+
+		<!-- VOLUME 2 -->
+		<li class="volume" id="volume2">
+			<a href="#volume2" class="ancora-volume"></a>
+			<div class="entrada">
+				<h2><span>Volume </span>2</h2>
+			</div>
+
+			<div class="apresenta">
+				<h3>Volume 2</h3>
+				<h4>Optio incidunt ullam illum</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio incidunt ullam illum eligendi eius eaque maiores voluptatum iusto.</p>
+
+				<dl>
+					<dt>Organização</dt>
+					<dd>André Gaudreault</dd>
+					<dd>Carlos Augusto da Nóbrega</dd>
+					<dd>Felipe C. Londoño</dd>
+				</dl>
+
+				<p><a href="#" class="btn">Acessar volume</a></p>
+			</div>
+
+			<div class="voltar"></div>
 		</li>
 
-		<li class="desabilitado">
-			<a href="#" class="ancora-modulo"></a>
-			<h2><span>Módulo </span>3</h2>
+
+		<!-- VOLUME 3 -->
+		<li class="volume desabilitado">
+			<a href="#" class="ancora-volume"></a>
+			<div class="entrada">
+				<h2><span>Volume </span>3</h2>
+			</div>
 		</li>
 
-		<li class="desabilitado">
-			<a href="#" class="ancora-modulo"></a>
-			<h2><span>Módulo </span>4</h2>
+
+		<!-- VOLUME 4 -->
+		<li class="volume desabilitado">
+			<a href="#" class="ancora-volume"></a>
+			
+			<div class="entrada">
+				<h2><span>Volume </span>4</h2>
+			</div>
 		</li>
 
-		<li class="desabilitado">
-			<a href="#" class="ancora-modulo"></a>
-			<h2><span>Módulo </span>5</h2>
+	
+		<!-- VOLUME 5 -->
+		<li class="volume desabilitado">
+			<a href="#" class="ancora-volume"></a>
+			
+			<div class="entrada">
+				<h2><span>Volume </span>5</h2>
+			</div>
 		</li>
 
-		<li class="desabilitado">
-			<a href="#" class="ancora-modulo"></a>
-			<h2><span>Módulo </span>6</h2>
+
+		<!-- VOLUME 6 -->
+		<li class="volume desabilitado">
+			<a href="#" class="ancora-volume"></a>
+			<div class="entrada">
+				<h2><span>Volume </span>6</h2>
+			</div>
 		</li>
 	</ul>
 </main>
