textura e fundos, barra de progressao de leitura e nav fixa

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="theme-color" content="#212121" />
 	<meta name="msapplication-navbutton-color" content="#212121">
 </head>
-<body>
+<body class="portal">
 
 <main class="container" id="portal">
 	<header id="header-portal">
