Versão mobile para área de artigos

--- a/volume1/index.html
+++ b/volume1/index.html
@@ -30,9 +30,9 @@
 
 		<nav><ul>
 			<li class="colecao"><a href="index.html"><span>Coleção</span></a></li>
-			<li><a href="volume1/ficha-tecnica.html" class="btn">Sobre o ebook</a></li>
+			<li><a href="volume1/ficha-tecnica.html" class="btn">Sobre<span> o ebook</span></a></li>
 			<li class="nav">
-				<a href="volume1/index.html"><span>Sumário</span></a><br>
+				<a href="volume1/index.html"><span>Sumário</span></a>
 				<a href="#"><span>Imprimir</span></a>
 			</li>
 		</ul></nav>
