--- a/volume1/index.html
+++ b/volume1/index.html
@@ -33,45 +33,209 @@
 			<li><a href="volume1/ficha-tecnica.html" class="btn">Sobre<span> o ebook</span></a></li>
 			<li class="nav">
 				<a href="volume1/index.html"><span>Sumário</span></a>
-				<a href="#"><span>Imprimir</span></a>
+				<button onclick="window.print()" role="button"><span>Imprimir</span></button>
 			</li>
 		</ul></nav>
 
 	</header>
 
 
-	<aside>
-		<dl>
-			<dt>Organização</dt>
-			<dd>André Gaudreault</dd>
-			<dd>Carlos Augusto da Nóbrega</dd>
-			<dd>Felipe C. Londoño</dd>
-		</dl>
-		<dl>
-			<dt>Autoria</dt>
-			<dd>André Gaudreault</dd>
-			<dd>Carlos Augusto da Nóbrega</dd>
-			<dd>Felipe C. Londoño</dd>
-		</dl>
-	</aside>
-
-
 	<article>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut maxime sit voluptatibus enim incidunt dolores, eius exercitationem quas, perferendis debitis distinctio quisquam ipsum qui eveniet iusto fugiat cupiditate, possimus molestias.</p>
+
+		<!-- autoria e organização -->
+		<aside>
+			<dl>
+				<dt>Organização</dt>
+				<dd>André Gaudreault</dd>
+				<dd>Carlos Augusto da Nóbrega</dd>
+				<dd>Felipe C. Londoño</dd>
+			</dl>
+			<dl>
+				<dt>Autoria</dt>
+				<dd>André Gaudreault</dd>
+				<dd>Carlos Augusto da Nóbrega</dd>
+				<dd>Felipe C. Londoño</dd>
+			</dl>
+		</aside>
+		<!-- autoria e organização -->
+
+
+		
+		<h2>Subtitulo H2</h2>
 		<p>Pariatur adipisci aliquam harum totam ad dignissimos dolore minus veniam veritatis distinctio laborum maiores eveniet perferendis neque accusantium, est eaque iste consectetur illo? Minima fuga suscipit dolor tenetur, adipisci magni?</p>
-		<p>Sed at odio cumque, ipsa eos suscipit tempore illo quasi odit sit pariatur laboriosam, fugiat, doloribus ducimus est corrupti repellat quia. Corporis non, nihil maiores incidunt, at laboriosam nobis nulla?</p>
-		<p>Enim perspiciatis cumque incidunt numquam fugit atque tenetur vero facere possimus! Eaque exercitationem doloribus laudantium ducimus dolores corrupti numquam quisquam doloremque eum nulla maiores, quae assumenda voluptatem, fugiat ex quam.</p>
+
+		<h3>Subtítulo h3</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima minus, corporis accusantium vero obcaecati at rerum nam ipsam dolorem deserunt, optio saepe debitis hic nulla quisquam voluptatum odit officia eaque id aspernatur et. Vel eaque similique recusandae fuga cum. Dolores autem cumque minima dolorum! Iste eum amet, mollitia debitis enim sed dolorum qui voluptate provident natus reiciendis adipisci facilis minima voluptatem iusto consectetur optio fugiat repellendus soluta, ducimus modi placeat vitae numquam. Ipsum maxime, unde nulla quisquam fuga. Ipsam expedita eum suscipit odio iste, ut consequuntur possimus in eveniet veritatis velit autem repudiandae quibusdam earum aliquid? Tempora commodi illo explicabo?</p>
-		<p>Assumenda, minus consectetur similique iure, itaque qui atque maiores fugit impedit perferendis recusandae nobis adipisci mollitia ipsum provident quas neque esse nesciunt, unde laudantium accusamus! Alias sunt, modi dolorum adipisci iusto illo, quaerat repellat voluptatem pariatur veritatis a odit facilis totam maxime. Iure mollitia, reprehenderit consectetur magnam sit asperiores. Ea numquam cum minima non quidem. Ea ducimus consequatur labore fugit totam voluptas, molestiae repellendus obcaecati dolor nisi mollitia deserunt neque quas asperiores, ullam impedit facilis veniam repudiandae excepturi, nam esse in sit dolorum sapiente! Itaque consequuntur molestiae velit a animi eligendi, eum repellat. Inventore animi mollitia in, sed adipisci quos!</p>
+
+		<h4>Subtítulo h4</h4>
 		<p>Ut quasi explicabo nostrum, accusantium magni saepe sapiente sequi perspiciatis. Earum iste tempora perspiciatis delectus nihil similique est, incidunt non fugiat enim. Ratione quia consectetur illum eius. Voluptas magni neque eveniet excepturi minima consequatur quisquam, ducimus quas tempora aliquid repellendus, exercitationem obcaecati qui, sint sit. Magni facere adipisci obcaecati commodi aliquam laborum amet dolorum dicta nam, officiis officia impedit, iure ipsa veniam harum debitis quos pariatur corporis! Esse eligendi cupiditate consequuntur animi, quidem saepe dicta ad enim, provident, nemo debitis adipisci incidunt sunt quibusdam perferendis aliquam? Quis vitae sed repellendus eveniet. Libero totam odit minima voluptate perferendis, provident perspiciatis reiciendis.</p>
-		<p>Dolorem saepe placeat, molestias cumque, corporis at reprehenderit sapiente, nulla fugiat quod eveniet. Dicta dolor expedita, suscipit autem fugiat eveniet dignissimos nesciunt molestiae quis vel numquam neque doloremque. Cumque unde omnis temporibus rem dolor dolore natus, aliquid nobis a delectus sint sit fugit eaque ex ab dolores expedita assumenda et culpa ducimus neque repellendus. Eveniet, dignissimos, rerum. Iste non fugit illo asperiores aliquam ipsum vel rerum eaque error provident voluptatem velit quisquam porro neque facilis atque quos, nesciunt earum accusamus deserunt tenetur. Suscipit rerum ex, asperiores tempore, laborum iusto debitis animi amet cum doloribus natus voluptatibus dolorum! Commodi, omnis, odio.</p>
+
+		<figure>
+			<img src="volume1/imagens/placeholder.jpg" alt="Imagem descrição aqui">
+			<figcaption><p><strong>Imagem tamanho NORMAL.</strong> Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam.</p></figcaption>
+		</figure>
+
+		<h5>Subtítulo h5</h5>
 		<p>Iure cupiditate, amet, aspernatur id vitae quam doloribus error commodi reiciendis omnis, ducimus. Quidem nisi aliquam obcaecati harum eos sit id veniam dolorem quis suscipit adipisci eligendi quam placeat, asperiores culpa totam soluta quaerat voluptatum. Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam? Aliquam non cupiditate tempora, tempore minus ab harum commodi ipsum fugiat voluptatem? Quae velit nobis corporis aspernatur non, repellat distinctio, cum consequatur ex ea pariatur. Itaque, unde! Autem explicabo illo excepturi porro aliquam qui, repellendus in earum, consequatur iure reiciendis quia consequuntur voluptate dolore ut ipsa fugit ea temporibus.</p>
+
+		<hr>
+
+
 		<p>Iure id aut ratione nisi hic excepturi consequuntur consequatur eligendi tenetur? Dolorum neque ullam, quas excepturi, error nemo dolor ipsam libero vitae facilis tempore, debitis officia nesciunt hic numquam iste cumque cum facere deserunt distinctio earum qui assumenda. Recusandae odio, pariatur minus tempora iusto commodi quod! Necessitatibus nisi ipsa, quam repudiandae velit laudantium doloribus similique aliquam, maiores corrupti nulla non deserunt ex in voluptatum perferendis expedita sapiente cum commodi! Dicta eum magnam, illum error, delectus excepturi eveniet maxime velit atque! Laboriosam unde id ipsa, vel hic temporibus a eius, quae autem ducimus enim cum corporis illo repellendus nostrum non, nulla?</p>
+
+
+		<div class="envolve-tabela grande">
+			<table>
+				<caption><strong>Uso de tabelas grandes</strong> Iure id aut ratione nisi hic excepturi consequuntur consequatur eligendi tenetur? Dolorum neque ullam, quas excepturi, error nemo dolor ipsam libero vitae facilis tempore.</caption>
+				<thead>
+				  <tr>
+				    <th>Celula 1</th>
+				    <th>Celula 2</th>
+				    <th>Celula 3</th>
+				    <th>Celula 4</th>
+				    <th>Celula 5</th>
+				  </tr>
+				</thead>
+				<tbody>
+				  <tr>
+				    <td>Culpa dignissimos velit veniam nesciunt deleniti omnis!</td>
+				    <td>Voluptate a repudiandae cupiditate molestias, distinctio. Quis.</td>
+				    <td>Reiciendis modi eveniet impedit fugiat, ipsa necessitatibus!</td>
+				    <td>Tenetur consequuntur, molestias consectetur? Exercitationem tempore, quis.</td>
+				    <td>Consequuntur vero quasi commodi expedita beatae deleniti?</td>
+				  </tr>
+				  <tr>
+				    <td>Quis omnis architecto, voluptates, blanditiis illo similique ratione quos optio eligendi laudantium.</td>
+				    <td>Labore vero voluptatum consequuntur temporibus molestias asperiores minus, est quaerat nemo voluptate.</td>
+				    <td>Cum quos animi enim veritatis et nesciunt non repellat, quis dolor labore?</td>
+				    <td>Dolorum praesentium obcaecati hic quis eaque earum aliquam natus sequi quaerat amet?</td>
+				    <td>Eum sed doloribus repudiandae vitae, ullam doloremque cumque aliquam, aspernatur magni maiores?</td>
+				  </tr>
+				  <tr>
+				    <td>Culpa dignissimos velit veniam nesciunt deleniti omnis!</td>
+				    <td>Voluptate a repudiandae cupiditate molestias, distinctio. Quis.</td>
+				    <td>Reiciendis modi eveniet impedit fugiat, ipsa necessitatibus!</td>
+				    <td>Tenetur consequuntur, molestias consectetur? Exercitationem tempore, quis.</td>
+				    <td>Consequuntur vero quasi commodi expedita beatae deleniti?</td>
+				  </tr>
+				</tbody>
+			</table>
+		</div>
+
+
 		<p>Vel ratione aut exercitationem tenetur, omnis hic harum totam pariatur cum molestias quaerat temporibus necessitatibus laboriosam voluptates quia maxime architecto ipsam quidem ex animi, neque quis, voluptas? Sed architecto laborum alias suscipit error modi quaerat pariatur, similique temporibus id, dicta deserunt assumenda magnam animi ut ea libero inventore laudantium eum, ad quibusdam facere maxime omnis odit quos. Sequi aut, ex laboriosam nisi soluta quia tempore in autem quo eveniet nemo atque repellendus tempora saepe corporis reiciendis, nulla, provident placeat sit unde debitis dignissimos. Quaerat, dignissimos consequatur! Officia praesentium itaque quos ratione explicabo! Ipsam totam, architecto nobis, numquam omnis ullam iusto.</p>
+
+		<figure class="grande">
+			<img src="volume1/imagens/placeholder.jpg" alt="Imagem descrição aqui">
+			<figcaption><p><strong>Imagem tamanho GRANDE.</strong> Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam.</p></figcaption>
+		</figure>
+
 		<p>Neque, ea aliquam quas doloremque, voluptates inventore illum assumenda dolor quam minus sit, ipsa sapiente. Autem, tempora maiores ipsum repellat aperiam consectetur veritatis eaque eum distinctio, at quia quos cumque, vero odio ut aspernatur quae ab nulla! Reprehenderit aperiam repellendus dolore impedit facilis quia perferendis laboriosam maxime nam, ad, similique velit recusandae iure tempore totam possimus consectetur iste animi enim, commodi magnam. Harum ad laboriosam, neque dolor, saepe impedit delectus vero praesentium libero odit repellendus sed pariatur officiis nesciunt optio animi aperiam explicabo! Sapiente iusto nesciunt repellat sit molestiae esse eum tempore libero, quos ipsa voluptatem ipsum ex optio distinctio!</p>
+
+
+		<h3>Galeria de fotos</h3>
+
+
+		<div class="galeria">
+			<figure>
+				<img src="volume1/imagens/placeholder.jpg" alt="Imagem descrição aqui">
+				<figcaption><p>Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam.</p></figcaption>
+			</figure>
+
+			<figure>
+				<img src="volume1/imagens/placeholder2.jpg" alt="Imagem descrição aqui">
+				<figcaption><p>Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam.</p></figcaption>
+			</figure>
+
+			<figure>
+				<img src="volume1/imagens/placeholder3.jpg" alt="Imagem descrição aqui">
+				<figcaption><p>Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam.</p></figcaption>
+			</figure>
+
+			<figure>
+				<img src="volume1/imagens/placeholder2.jpg" alt="Imagem descrição aqui">
+				<figcaption><p>Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam.</p></figcaption>
+			</figure>
+
+			<figure>
+				<img src="volume1/imagens/placeholder3.jpg" alt="Imagem descrição aqui">
+				<figcaption><p>Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam.</p></figcaption>
+			</figure>
+
+			<figure>
+				<img src="volume1/imagens/placeholder.jpg" alt="Imagem descrição aqui">
+				<figcaption><p>Exercitationem a, ea, rerum error provident asperiores esse harum eos unde nobis aut, modi eum laboriosam.</p></figcaption>
+			</figure>
+		</div>
+
 		<p>Iure, ipsa dolor. Iusto sapiente labore nesciunt enim mollitia officiis nihil aut veniam aliquid. Suscipit accusamus, distinctio enim quae recusandae ducimus quisquam, voluptatum aspernatur, magnam molestias ipsam facilis molestiae tenetur cum pariatur voluptas dolore saepe. Perferendis error adipisci ad iure quas soluta magnam architecto placeat nam eos nihil illo, quibusdam, maiores qui, quisquam. Quasi architecto, provident quidem reiciendis deleniti. Dolorem ducimus sapiente tempore unde facere nisi nemo eius, laborum esse iusto! Animi nemo reprehenderit, excepturi obcaecati labore vero iste autem quod esse inventore at fugiat nam veniam dicta quis nisi nostrum aliquid ab distinctio voluptate. Nisi, quasi. Molestiae, quasi maxime!</p>
+
+
+		<div class="envolve-tabela">
+			<table>
+				<caption><strong>Uso de tabelas menores</strong> Iure id aut ratione nisi hic excepturi consequuntur consequatur eligendi tenetur? Dolorum neque ullam, quas excepturi, error nemo dolor ipsam libero vitae facilis tempore.</caption>
+				<thead>
+				  <tr>
+				    <th>Celula 1</th>
+				    <th>Celula 2</th>
+				    <th>Celula 3</th>
+				  </tr>
+				</thead>
+				<tbody>
+				  <tr>
+				    <td>Culpa dignissimos velit veniam nesciunt deleniti omnis!</td>
+				    <td>Voluptate a repudiandae cupiditate molestias, distinctio. Quis.</td>
+				    <td>Reiciendis modi eveniet impedit fugiat, ipsa necessitatibus!</td>
+				  </tr>
+				  <tr>
+				    <td>Quis omnis architecto, voluptates, blanditiis illo similique ratione quos optio eligendi laudantium.</td>
+				    <td>Labore vero voluptatum consequuntur temporibus molestias asperiores minus, est quaerat nemo voluptate.</td>
+				    <td>Cum quos animi enim veritatis et nesciunt non repellat, quis dolor labore?</td>
+				  </tr>
+				  <tr>
+				    <td>Culpa dignissimos velit veniam nesciunt deleniti omnis!</td>
+				    <td>Voluptate a repudiandae cupiditate molestias, distinctio. Quis.</td>
+				    <td>Reiciendis modi eveniet impedit fugiat, ipsa necessitatibus!</td>
+				  </tr>
+				</tbody>
+			</table>
+		</div>
+
+
 		<p>Totam vero cumque minus quis, nemo laborum voluptatibus asperiores dicta, distinctio mollitia adipisci fugiat aliquam ipsa consectetur, qui veritatis omnis? Ratione suscipit consequuntur optio est, quod nostrum totam molestias? Consequuntur incidunt nisi, nam suscipit illo odio repudiandae modi explicabo voluptatem reiciendis cumque fugit iste recusandae eaque quis molestiae? Aliquam aut adipisci dolorum dignissimos ad reiciendis minus modi, ducimus explicabo perferendis sunt, nobis beatae nemo odit ex ut provident eum odio, ea dicta asperiores totam. Et voluptatem repellat vitae labore atque praesentium eveniet vero dolores nobis? Molestiae ex autem repellendus atque, aperiam minus, a aliquid necessitatibus, consequuntur accusamus numquam voluptatibus nulla.</p>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam dolores accusamus illum eum totam harum hic inventore odio vel autem veniam quibusdam, at labore assumenda sit soluta deserunt facere voluptatem in! Sed velit modi ipsum impedit dolor autem illum odit ex dolorem, delectus earum eveniet aspernatur cupiditate, asperiores doloribus dolores sunt sapiente fugiat reiciendis praesentium error? Cumque eaque, tempore sunt amet distinctio harum vero non impedit neque quo maiores omnis consequatur sed dicta nisi in voluptas debitis modi perferendis perspiciatis, at eos necessitatibus. Doloribus alias ab minus, at sit commodi.</p>
+
+
+		<h3>Vídeos incorporados Youtube</h3>
+
+		<div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/dhgClA902pM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	
+
+		<p>Quam harum quibusdam dolorem dignissimos, quia, nobis sit eaque. Eos dicta molestiae, voluptatem provident quaerat in consequatur eius dolorem eveniet magni veritatis animi ipsam, accusantium voluptatum, necessitatibus iste. Error consectetur modi recusandae. Illo, sunt? Velit at et aspernatur blanditiis minima odio quidem ab provident nisi eveniet vel cumque nam ipsam voluptatem, fugiat maxime eos aperiam sit iure illo sunt tempore, ea quia reprehenderit. Hic suscipit veritatis temporibus, quo ipsam esse quis quos expedita in tenetur delectus ullam quam est mollitia ad accusamus dicta. Laudantium atque molestias at! Corporis, perferendis libero.</p>
+
+
+		<div class="galeria videos">
+			<figure>
+				<div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/dhgClA902pM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<figcaption>Video #1</figcaption>
+			</figure>
+			<figure>
+				<div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/7f8J3x10-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<figcaption>Video #2</figcaption>
+			</figure>
+		</div>
+
+
+		<p>Voluptatum adipisci labore aspernatur placeat dolorum distinctio explicabo a, ad blanditiis. Neque hic impedit officiis, eius reprehenderit ipsam corporis. Suscipit ratione consectetur natus animi, est laborum qui, et eveniet eius. At odio, eos voluptate aut aliquid iure tempora! Architecto ab alias quaerat in modi expedita, asperiores, id quae nostrum inventore repellendus? Accusantium ullam quis praesentium a non nemo velit quasi quam doloribus, numquam adipisci, eveniet architecto illum aliquam perferendis similique, qui est illo obcaecati explicabo accusamus, magnam aperiam. Molestias, vel. Aliquam iure labore esse vel, dicta distinctio illum, ab eius.</p>
 	</article>
+
+
+	<footer>
+        <a href="index.html"><span aria-hidden="true">&larr;</span> Anterior</a>
+        <a href="volume1/001.html">Próximo <span aria-hidden="true">&rarr;</span></a>
+        <a href="volume1/sumario.html">Sumário</a>
+	</footer>
 </main>
 
 
