enviando para aprovação

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 
 		<!-- VOLUME 2 -->
 		<li class="volume" id="volume2">
-			<a href="#volume2" class="ancora-volume"></a>
 			<div class="entrada">
+				<a href="#volume2" class="ancora-volume"></a>
 				<h2><span>Volume </span>2</h2>
 			</div>
+
 
 			<div class="apresenta">
 				<h3>Volume 2</h3>
@@ -71,48 +72,119 @@
 					<dd>Felipe C. Londoño</dd>
 				</dl>
 
-				<p><a href="#" class="btn" >Acessar volume</a></p>
+				<p><a href="volume2/index.html" class="btn">Acessar volume</a></p>
 			</div>
 
-			<div class="voltar"></div>
+			<div class="voltar"><a href="index.html">voltar</a></div>
 		</li>
 
 
 		<!-- VOLUME 3 -->
-		<li class="volume desabilitado">
-			<a href="#" class="ancora-volume"></a>
+		<li class="volume" id="volume3">
 			<div class="entrada">
+				<a href="#volume3" class="ancora-volume"></a>
 				<h2><span>Volume </span>3</h2>
 			</div>
+
+
+			<div class="apresenta">
+				<h3>Volume 3</h3>
+				<h4>Optio incidunt ullam illum</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio incidunt ullam illum eligendi eius eaque maiores voluptatum iusto.</p>
+
+				<dl>
+					<dt>Organização</dt>
+					<dd>André Gaudreault</dd>
+					<dd>Carlos Augusto da Nóbrega</dd>
+					<dd>Felipe C. Londoño</dd>
+				</dl>
+
+				<p><a href="volume3/index.html" class="btn">Acessar volume</a></p>
+			</div>
+
+			<div class="voltar"><a href="index.html">voltar</a></div>
+
 		</li>
 
 
 		<!-- VOLUME 4 -->
-		<li class="volume desabilitado">
-			<a href="#" class="ancora-volume"></a>
-			
+		<li class="volume" id="volume4">
 			<div class="entrada">
+				<a href="#volume4" class="ancora-volume"></a>
 				<h2><span>Volume </span>4</h2>
 			</div>
+
+
+			<div class="apresenta">
+				<h3>Volume 4</h3>
+				<h4>Optio incidunt ullam illum</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio incidunt ullam illum eligendi eius eaque maiores voluptatum iusto.</p>
+
+				<dl>
+					<dt>Organização</dt>
+					<dd>André Gaudreault</dd>
+					<dd>Carlos Augusto da Nóbrega</dd>
+					<dd>Felipe C. Londoño</dd>
+				</dl>
+
+				<p><a href="volume4/index.html" class="btn">Acessar volume</a></p>
+			</div>
+
+			<div class="voltar"><a href="index.html">voltar</a></div>
 		</li>
 
 	
 		<!-- VOLUME 5 -->
-		<li class="volume desabilitado">
-			<a href="#" class="ancora-volume"></a>
-			
+		<li class="volume" id="volume5">
 			<div class="entrada">
+				<a href="#volume5" class="ancora-volume"></a>
 				<h2><span>Volume </span>5</h2>
 			</div>
+
+
+			<div class="apresenta">
+				<h3>Volume 5</h3>
+				<h4>Optio incidunt ullam illum</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio incidunt ullam illum eligendi eius eaque maiores voluptatum iusto.</p>
+
+				<dl>
+					<dt>Organização</dt>
+					<dd>André Gaudreault</dd>
+					<dd>Carlos Augusto da Nóbrega</dd>
+					<dd>Felipe C. Londoño</dd>
+				</dl>
+
+				<p><a href="volume5/index.html" class="btn">Acessar volume</a></p>
+			</div>
+
+			<div class="voltar"><a href="index.html">voltar</a></div>
 		</li>
 
 
 		<!-- VOLUME 6 -->
-		<li class="volume desabilitado">
-			<a href="#" class="ancora-volume"></a>
+		<li class="volume" id="volume6">
 			<div class="entrada">
+				<a href="#volume6" class="ancora-volume"></a>
 				<h2><span>Volume </span>6</h2>
 			</div>
+
+
+			<div class="apresenta">
+				<h3>Volume 6</h3>
+				<h4>Optio incidunt ullam illum</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio incidunt ullam illum eligendi eius eaque maiores voluptatum iusto.</p>
+
+				<dl>
+					<dt>Organização</dt>
+					<dd>André Gaudreault</dd>
+					<dd>Carlos Augusto da Nóbrega</dd>
+					<dd>Felipe C. Londoño</dd>
+				</dl>
+
+				<p><a href="volume6/index.html" class="btn">Acessar volume</a></p>
+			</div>
+
+			<div class="voltar"><a href="index.html">voltar</a></div>
 		</li>
 	</ul>
 </main>
