alterando sumario e trocando nome de ficha técnica

--- a/volume1/sumario.html
+++ b/volume1/sumario.html
@@ -97,7 +97,7 @@
 	<footer>
         <a href="index.html"><span aria-hidden="true">&larr;</span> Portal</a>
         <!-- <a href="volume1/001.html">Próximo <span aria-hidden="true">&rarr;</span></a> -->
-        <a href="volume1/ficha-tecnica.html">Ficha Técnica</a>
+        <a href="volume1/ficha-tecnica.html">Sobre o ebook</a>
 	</footer>
 </main>
 
